width of octodex fixed to avoid squishing of elements

--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,16 @@ ul .authors img {
 }
 
 .triangle {
-width: 0;
-height: 0;
-border-style: solid;
-border-width: 30px 25px 0 25px;
-border-color: #b7babd transparent transparent transparent;
-float: right;
-vertical-align:top;
-margin-top: -7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 30px 25px 0 25px;
+  border-color: #b7babd transparent transparent transparent;
+  float: right;
+  vertical-align:top;
+  margin-top: -7px;
+}
+
+.octodex {
+  width: 2800px;
 }
